Refactor control endpoint-related resources into their own type